[package]
name = "near-cli"
version = "0.1.3"
authors = ["Near Inc <hello@near.org>"]
description = "Command line utility for NEAR protocol"
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = { version = "2", features = [ "openssl" ] }
openssl-probe = { version = "0.1.2" }

derive_more = "0.99.9"
rand = "0.7"
smart-default = "0.6.0"
strum = "0.19.2"
strum_macros = "0.19.2"

base64 = "0.12.3"
bip39 = { version = "1.0.0-rc.1", features = [ "rand" ] }
bs58 = "0.3"
ed25519-dalek = { version = "1" }
hex = "0.4.2"
serde_json = "1.0.57"
# The fix is needed for seemless clap integration: https://github.com/wusyong/slip10/pull/3
slip10 = { git = "https://github.com/frol/slip10", rev = "a3235dd0acf3a485f547cf23e2dd56838adb45f8" }

clap = "3.0.0-beta.1"
color-eyre = "0.5"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

near-crypto = { git = "https://github.com/nearprotocol/nearcore", rev="312a8f4884f79c1d36f1df0809c6d5f6cc95241d" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore", rev="312a8f4884f79c1d36f1df0809c6d5f6cc95241d" }
near-jsonrpc-client = { git = "https://github.com/nearprotocol/nearcore", rev="312a8f4884f79c1d36f1df0809c6d5f6cc95241d" }
